Process Hacker

1.3.7.3
 * NEW/IMPROVED:
   * #2780260 - "add <Enter> key to open Proc Properties"
   * #2780277 - "add <ENTER> to shortcut list for default action"
   * Customizable tray icons - CPU History, CPU Usage, I/O History, 
     Commit History and Physical Memory History
   * "Terminate Process Tree"
   * Process tree loads instantly
   * Process properties (appears to) loads faster
   * Decreased CPU usage
   * Significantly less memory usage, especially when opening 
     process properties
   * Thread termination now prompts
   * Implemented Esc to close windows
   * Cycles, Page Priority and I/O Priority in process statistics
   * Integrity, I/O priority and page priority columns
   * Windows are protected from being offscreen when they load
   * Process property window locations are now saved
   * The main window dimensions are saved when exiting minimized
 * FIXED:
   * Unhandled exception when process properties is closed within 100ms of 
     being opened
   * Handle filter took a while to start up
   * Forgot to add sorting for Private WS, Shared WS and Shareable WS
   * dbghelp warnings were not being shown the first time process 
     properties opened
   * Random file-object-related BSODs
   * Increased PID limit in Hidden Processes to 65536

1.3.7.1
 * NEW:
   * "-nokph" command line switch to disable KProcessHacker
 * FIXED:
   * #2779558 - "TreeViewAdv font cannot be initialized"
   * KProcessHacker BSOD on some Vista systems
   * Minor issue where new handle providers in the process window would 
     not be added to the shared thread provider

1.3.7.0
 * NEW/IMPROVED:
   * Terminating processes and threads now bypasses all but the most 
     advanced anti-termination methods
   * Better hidden processes scanner (similar to Blacklight's and IceSword's) 
     which can now detect both Hacker Defender and FU.
   * Basic support for Windows 7 in Process Hacker and KProcessHacker
   * Proper symbol support with dbghelp.dll