@@ -6,6 +6,7 @@ Process Hacker
    * #2780277 - "add <ENTER> to shortcut list for default action"
    * Customizable tray icons - CPU History, CPU Usage, I/O History, 
      Commit History and Physical Memory History
+   * Base Priority, Start Time, and CPU Time columns
    * "Terminate Process Tree"
    * Process tree loads instantly
    * Process properties (appears to) loads faster
